--- a/www/zirmenu.html
+++ b/www/zirmenu.html
@@ -128,7 +128,7 @@
 	<div id="warper" >
 			<div id="header">
 				<div id="back-btn" onclick="parent.history.back();"></div>
-				<div id="header-text-2th">حسینیه</div>
+				<div id="header-text-2th">زیارت عاشورا</div>
 				<div class="center"></div>
 			</div>
 			<div id="footer">
@@ -142,29 +142,12 @@
 			<div id="main" >
 			
 				<ul class="zirmenu">
-					<li><a href="#">کنار قدمهای جابر سوی نینوا رهسپاریم</a></li>
-					<li><a href="#">الأربعینُ مَوْعدی</a></li>
-					<li><a href="#">کربلا ای خاک اندوه و بلا</a></li>
-					<li><a href="#">بگذرم از جان در راه جانان</a></li>
-					<li><a href="#">ای امام بصیرت کشته جهل امت</a></li>
-					<li><a href="#">خلیل ‌آسا به همت بت شکستم</a></li>
-					<li><a href="#">علمدار تو یاور ثاراللهی</a></li>
-					<li><a href="#">یابنی قتلوک</a></li>
-					<li><a href="#">انا علی ابنُ ذبیح کربلا</a></li>
-					<li><a href="#">لحظه‌ها شد در اسارت لیلة‌الاسرای تو</a></li>
-					<li><a href="#">حسین جان کفنت کو</a></li>
-					<li><a href="#">چه زینبی که صبر ز صبر او خجل</a></li>
-					<li><a href="#">شدم در پی‌ات دیده گریان</a></li>
-					<li><a href="#">قرآن شنیدن داره از لبای مقدست</a></li>
-					<li><a href="#">خوشا آنانکه دائم با تو بودند</a></li>
-					<li><a href="#">یاد امام و شهدا</a></li>
-					<li><a href="#">من غروب سرخت را زیبا دیدم</a></li>
-					<li><a href="#">درمیدان میمانم تانفس آخرم</a></li>
-					<li><a href="#">سید و مولا حسین</a></li>
-					<li><a href="#">منو این همه غم ارباب ارباب</a></li>
-					<li><a href="#">زائر کوی حسین</a></li>
-					<li><a href="#">کربلا ای بهشت محبین اهل‌بیت</a></li>
-					<li><a href="#">ای امام شهیدان خمینی</a></li>
+					<li><a href="#">آداب سفر</a></li>
+					<li><a href="#">آداب زیارات</a></li>
+					<li><a href="#">آداب زیارت سید الشهداء</a></li>
+					<li><a href="#">احکام سفرهای زیارتی</a></li>
+					<li><a href="#">احکام زیارت نیابتی</a></li>
+					<li><a href="#">احکام عزاداری</a></li>
 				</ul>
 
 			
