--- a/www/dar_safar.html
+++ b/www/dar_safar.html
@@ -96,7 +96,7 @@
 			FastClick.attach(document.body);
 			
 			if ( device.platform == 'Android' ){//Android,iOS,win7=WinCE,win8=Win32NT
-				document.addEventListener("backbutton", go_back, false);
+				document.addEventListener("backbutton", go_back_to_index, false);
 			}
 
 		}
@@ -163,11 +163,11 @@
 -->
 			<div id="slides">
 				<div class="silde_frame slide1th" >
-					<img src="images/slider/h01_l.jpg" class="silde_frame_image" retina="images/slider/h01.jpg" style="width:100%;" onclick="window.location.href='map.html';" />
+					<img src="images/slider/h01_l.jpg" class="silde_frame_image" retina="images/slider/h01.jpg" style="width:100%;" onclick="window.location.href='news.html';" />
 					<div class="slide_navigator">
 						<div class="slide_navigator_bg"></div>
 						<div class="slide_navigator_next slidesjs-next">نقشه <img src="images/slider/next-btn.png"></div>
-						<div class="slide_navigator_link"onclick="window.location.href='map.html';">اخبار مرز</div>
+						<div class="slide_navigator_link" onclick="window.location.href='news.html';">اخبار مرز</div>
 						<div class="slide_navigator_previous slidesjs-previous">مومنانه <img src="images/slider/previous-btn.png"></div>
 					</div>
 				</div>
@@ -247,7 +247,7 @@
 				<a href="#" class="slidesjs-next slidesjs-navigation"><i class="icon-chevron-right icon-large"></i></a>
 			</div>
 			
-			<div class="slider_back_page_btn" onclick="parent.history.back();"><img src="images/slider/back-btn.png" style="width:100%;" ></div>
+			<div class="slider_back_page_btn" onclick="window.location.href = 'index.html';"><img src="images/slider/back-btn.png" style="width:100%;" ></div>
 
 		</div>
 </body>
