--- a/www/info.html
+++ b/www/info.html
@@ -117,7 +117,7 @@
 	<div id="warper" >
 			<div id="header">
 				<div id="back-btn" onclick="parent.history.back();"></div>
-				<div id="header-text-2th">اطلاعات</div>
+				<div id="header-text-2th">اطلاعات ضروری سفر</div>
 				<div class="center"></div>
 			</div>
 			<div id="footer">
