--- a/www/news_in.html
+++ b/www/news_in.html
@@ -53,6 +53,7 @@
 			//alert($(document).height()); 
 			//alert($("#warper").height());
 			$("#main").height($(window).height() - $("#header").height() - $("#footer").height()-30);
+			$(".akhbar_title").width($(window).width()-115-40);
 			//$("#container").height($("#warper").height()-$("#header").height());
 			//$(".mypreload").delay(100000).html("");
 		});
@@ -86,26 +87,8 @@
 				//alert("2");
 			});
 */
-			max_width = 0;
-			win_width = $('.zirmenu li').width();
-			
-			$('.zirmenu li a').each( function(i) {
-				if(max_width<$(this).width())
-					max_width = $(this).width();
-			});
-				max_width_temp = max_width;
-				max_width = max_width + 55 + 50;
-			$('.zirmenu li a').each( function(i) {
-				if(max_width>win_width)
-				{
-					$(this).attr("style","background-image:none;padding:0 5px;border-radius:3px;background-color:#f0f0f0 !important;");
-				}
-				else
-				{
-					$(this).attr("style","width:" + (max_width_temp + 10) + "px;display:block;padding:0 40px;");
-				}
-			});
-
+		
+		
 			setTimeout(function(){
 				$(".mypreload").html("");
 				$('#main').addClass("simplebar");
@@ -117,6 +100,46 @@
 
 	</script>	
 
+		
+		
+<style>
+
+.akhbar_header {
+  min-height: 60px;
+  width: 100%;
+}
+span.time {
+    border-left: 1px solid #039C84;
+    left: 31px;
+}
+
+span.date {
+    padding-right: 10px;
+}
+.akhbar_header span {
+	color: #039C84;
+    float: left;
+    width: 45px;
+    margin-top: 22px;
+    height: 15px;
+}
+span.date_text {
+  padding: 0 !important;
+  text-align: left;
+}
+.akhbar_title {
+    float: right;
+    color: #039c84;
+    line-height: 58px;
+	font-weight:bold;
+}
+.akhbar_text {
+    float: right;
+    padding: 23px;
+}
+
+</style>
+<!--footer-bg-center.png-->
 </head>
 <body class="tarjome_disable sound_disable" onload="init();" style="overflow:hidden;width:100%;">
 	<div id="bg-top"></div><div id="bg-bottom"></div>
@@ -128,7 +151,7 @@
 	<div id="warper" >
 			<div id="header">
 				<div id="back-btn" onclick="parent.history.back();"></div>
-				<div id="header-text-2th">حسینیه</div>
+				<div id="header-text-2th">اخبار مرز</div>
 				<div class="center"></div>
 			</div>
 			<div id="footer">
@@ -139,43 +162,42 @@
 				</div>
 			</div>
 			<div id="container" >
-			<div id="main" >
-			
-				<ul class="zirmenu">
-					<li><a href="#">کنار قدمهای جابر سوی نینوا رهسپاریم</a></li>
-					<li><a href="#">الأربعینُ مَوْعدی</a></li>
-					<li><a href="#">کربلا ای خاک اندوه و بلا</a></li>
-					<li><a href="#">بگذرم از جان در راه جانان</a></li>
-					<li><a href="#">ای امام بصیرت کشته جهل امت</a></li>
-					<li><a href="#">خلیل ‌آسا به همت بت شکستم</a></li>
-					<li><a href="#">علمدار تو یاور ثاراللهی</a></li>
-					<li><a href="#">یابنی قتلوک</a></li>
-					<li><a href="#">انا علی ابنُ ذبیح کربلا</a></li>
-					<li><a href="#">لحظه‌ها شد در اسارت لیلة‌الاسرای تو</a></li>
-					<li><a href="#">حسین جان کفنت کو</a></li>
-					<li><a href="#">چه زینبی که صبر ز صبر او خجل</a></li>
-					<li><a href="#">شدم در پی‌ات دیده گریان</a></li>
-					<li><a href="#">قرآن شنیدن داره از لبای مقدست</a></li>
-					<li><a href="#">خوشا آنانکه دائم با تو بودند</a></li>
-					<li><a href="#">یاد امام و شهدا</a></li>
-					<li><a href="#">من غروب سرخت را زیبا دیدم</a></li>
-					<li><a href="#">درمیدان میمانم تانفس آخرم</a></li>
-					<li><a href="#">سید و مولا حسین</a></li>
-					<li><a href="#">منو این همه غم ارباب ارباب</a></li>
-					<li><a href="#">زائر کوی حسین</a></li>
-					<li><a href="#">کربلا ای بهشت محبین اهل‌بیت</a></li>
-					<li><a href="#">ای امام شهیدان خمینی</a></li>
-				</ul>
+				<div id="main" >
+					<div class="akhbar_header">
+						<p class="akhbar_title">همه ی مرز ها باز است</p>
+						<span class="date_text">1394/08/29<br/>12:15</span>
+					</div>
 
+					<div class="justify doa_text">
+<p>
+سرهنگ ابراهیم رضایی‌نژاد رئیس پلیس مهاجرت و گذرنامه ناجا در گفت‌وگو با خبرنگار انتظامی خبرگزاری فارس، در مورد آمار زائران عتبات عالیات اظهار داشت: تا ساعت 15 امروز 950 هزار نفر از مرز ایران عبور کردند.
+
+وی تصریح کرد: این تعداد از مرزهای شلمچه،‌چزابه، مهران و تعدادی به صورت هوایی و تعداد کمی هم به صورت دریایی از مرز ایران خارج شده و به سمت عراق حرکت کرده‌اند.
+
+سرهنگ رضایی‌نژاد با بیان این مطلب که همه مرزها باز است، گفت: مرز مهران نسبت به بقیه مرزها تراکم جمعیت بیشتری دارد.
+
+رئیس پلیس مهاجرت و گذرنامه ناجا از هموطنان خواست که فقط با گذرنامه معتبر به مرز مراجعه کنند
+
+این مقام ارشد انتظامی در پاسخ به سؤال دیگر فارس در مورد تراکم جمعیت در مرزهای زمینی خاطرنشان کرد: مهران رتبه اول در عبور زائران را به خود اختصاص داده و شلمچه و چزابه در رده‌های بعدی تعداد و تردد زائران هستند.سرهنگ ابراهیم رضایی‌نژاد رئیس پلیس مهاجرت و گذرنامه ناجا در گفت‌وگو با خبرنگار انتظامی خبرگزاری فارس، در مورد آمار زائران عتبات عالیات اظهار داشت: تا ساعت 15 امروز 950 هزار نفر از مرز ایران عبور کردند.
+
+وی تصریح کرد: این تعداد از مرزهای شلمچه،‌چزابه، مهران و تعدادی به صورت هوایی و تعداد کمی هم به صورت دریایی از مرز ایران خارج شده و به سمت عراق حرکت کرده‌اند.
+
+سرهنگ رضایی‌نژاد با بیان این مطلب که همه مرزها باز است، گفت: مرز مهران نسبت به بقیه مرزها تراکم جمعیت بیشتری دارد.
+
+رئیس پلیس مهاجرت و گذرنامه ناجا از هموطنان خواست که فقط با گذرنامه معتبر به مرز مراجعه کنند
+
+این مقام ارشد انتظامی در پاسخ به سؤال دیگر فارس در مورد تراکم جمعیت در مرزهای زمینی خاطرنشان کرد: مهران رتبه اول در عبور زائران را به خود اختصاص داده و شلمچه و چزابه در رده‌های بعدی تعداد و تردد زائران هستند.
+</p>
+					</div>
 			
 			</div>
-	<div id="controls_size">
-		<div id="css_style"></div>
-		<div id="controls_over"></div>
-		<a href="#" id="large">قلم</a>
-		<a href="#" id="medium">قلم</a>
-		<a href="#" id="small" class=>قلم</a>
-		<div id="controls_bg"></div>
-	</div>
+			<div id="controls_size">
+				<div id="css_style"></div>
+				<div id="controls_over"></div>
+				<a href="#" id="large">قلم</a>
+				<a href="#" id="medium">قلم</a>
+				<a href="#" id="small" class=>قلم</a>
+				<div id="controls_bg"></div>
+			</div>
 </body>
 </html>
