--- a/www/roze.html
+++ b/www/roze.html
@@ -91,12 +91,25 @@
 		
 <style>
 ul.big_list li {
+  background-image: url("images/naghsh.png");
+  background-position: right 6px top 12px;
+  background-repeat: no-repeat;
+  background-size: 31px auto;
+  border-bottom: 1px solid white;
+  box-sizing: border-box;
+  cursor: pointer;
+  float: right;
+  font-weight: bold;
+  height: 40px;
+  line-height: 40px;
+  padding-right: 45px;
+  width: 200%;
+  list-style:none;
+}
+ul.big_list {
+    overflow: hidden;
     width: 100%;
-    float: right;
-    height: 30px;
-    line-height: 30px;
-    border-bottom: 1px solid white;
-    cursor: pointer;
+    box-sizing: border-box;
 }
 
 </style>
@@ -134,6 +147,7 @@ ul.big_list li {
 							<li onclick='playAudio_new("audio/besmella.mp3");' >شهادت حضرت علی‌اصغر علیه السلام</li>
 							<li onclick='playAudio_new("audio/salame.mp3");' >شهادت حضرت علی‌‌اکبر علیه السلام</li>
 							<li onclick='playAudio_new("audio/besmella.mp3");' >شهادت حضرت عباس علیه السلام</li>
+							<li onclick='playAudio_new("audio/salame.mp3");' >عصر عاشورا</li>
 						</ul>
 
 					</div>
