--- a/www/shaerane.html
+++ b/www/shaerane.html
@@ -143,13 +143,13 @@
 			<div id="main" >
 			
 				<ul class="zirmenu">
-					<li><a href="#">قلم به دست گرفتم که ماجرا بنویسم</a></li>
-					<li><a href="#">حسین بود و تو بودی، تو خواهری کردی</a></li>
-					<li><a href="#">با اشک‌هاش دفتر خود را نمور کرد</a></li>
-					<li><a href="#">هوای دخترکی را برادرش دارد</a></li>
-					<li><a href="#">رباعی گفتی و تقدیم سلطان غزل کردی</a></li>
-					<li><a href="#">بگو که یک شبه مردی شدی برای خودت</a></li>
-					<li><a href="#">قلم اینک به تمنای تو در رقص آمد</a></li>
+					<li><a href="shaerane_01.html">قلم به دست گرفتم که ماجرا بنویسم</a></li>
+					<li><a href="shaerane_02.html">حسین بود و تو بودی، تو خواهری کردی</a></li>
+					<li><a href="shaerane_03.html">با اشک‌هاش دفتر خود را نمور کرد</a></li>
+					<li><a href="shaerane_04.html">هوای دخترکی را برادرش دارد</a></li>
+					<li><a href="shaerane_05.html">رباعی گفتی و تقدیم سلطان غزل کردی</a></li>
+					<li><a href="shaerane_06.html">بگو که یک شبه مردی شدی برای خودت</a></li>
+					<li><a href="shaerane_07.html">قلم اینک به تمنای تو در رقص آمد</a></li>
 				</ul>
 
 			
