--- a/www/ziyarat-tozihat-imam-husein.html
+++ b/www/ziyarat-tozihat-imam-husein.html
@@ -117,7 +117,7 @@
 	<div id="warper" >
 			<div id="header">
 				<div id="back-btn" onclick="parent.history.back();"></div>
-				<div id="header-text-2th">زیارت عاشورا</div>
+				<div id="header-text-2th">زیارت امام حسین علیه السلام</div>
 				<div class="center"></div>
 			</div>
 			<div id="footer">
