--- a/www/index.html
+++ b/www/index.html
@@ -169,7 +169,7 @@
 		function onDeviceReady() {
 			if(window.sessionStorage.getItem('session_rand') == null)
 			{
-				playAudioBackground("audio/salame.mp3");
+				playAudioBackground("audio/besmella.mp3");
 				window.sessionStorage.setItem('session_rand',Math.random());				
 			}
 
