--- a/www/news.html
+++ b/www/news.html
@@ -208,7 +208,7 @@ span.date_text {
 				<div id="controls_over"></div>
 				<a href="#" id="large">قلم</a>
 				<a href="#" id="medium">قلم</a>
-				<a href="#" id="small" class=>قلم</a>
+				<a href="#" id="small" >قلم</a>
 				<div id="controls_bg"></div>
 			</div>
 </body>
