--- a/www/adabe-ziyarat.html
+++ b/www/adabe-ziyarat.html
@@ -141,7 +141,7 @@
 		<div id="controls_over"></div>
 		<a href="#" id="large">قلم</a>
 		<a href="#" id="medium">قلم</a>
-		<a href="#" id="small" class=>قلم</a>
+		<a href="#" id="small" >قلم</a>
 		<div id="controls_bg"></div>
 	</div>
 </body>
