--- a/www/arabic.html
+++ b/www/arabic.html
@@ -917,7 +917,7 @@ $(document).ready(function() {
 	<div id="controls_over"></div>
 	<a href="#" id="large">قلم</a>
 	<a href="#" id="medium">قلم</a>
-	<a href="#" id="small" class=>قلم</a>
+	<a href="#" id="small" >قلم</a>
 </div>
 </body>
 </html>
